--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
 
         <div class="buttons">
             <button class="numeral" data-value="M">M</button>
-            <button class="clear" data-action="clear">AC</button> 
-            <button class="numeral" data-value="D">D</button>
+            <button class="spacer" aria-hidden="true" tabindex="-1"></button>
+            <button class="clear" data-action="clear">AC</button>
+
             <button class="numeral" data-value="C">C</button>
+            <button class="numeral" data-value="D">D</button>
             <button class="operator" data-action="subtract">-</button>
 
-            <button class="numeral" data-value="L">L</button>
             <button class="numeral" data-value="X">X</button>
+            <button class="numeral" data-value="L">L</button>
             <button class="operator" data-action="add">+</button>
 
-            <button class="numeral" data-value="V">V</button>
             <button class="numeral" data-value="I">I</button>
+            <button class="numeral" data-value="V">V</button>
             <button class="equal" data-action="calculate">=</button>
         </div>
     </div>
